--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -18,3 +18,24 @@ Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpe landa mibeko mpo ya
 ==Voir aussi==
 * [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
 * [[Nzela ya kopekisa zemi]]
+
+[[cs:Kondom]]
+[[da:Kondom]]
+[[en:Condom]]
+[[eo:Kondomo]]
+[[es:Preservativo]]
+[[fa:کاندوم]]
+[[fi:Kondomi]]
+[[fr:Préservatif]]
+[[he:קונדום]]
+[[id:Kondom]]
+[[it:Preservativo]]
+[[ja:コンドーム]]
+[[ko:콘돔]]
+[[lt:Prezervatyvas]]
+[[ms:Kondom]]
+[[nl:Condoom]]
+[[pl:Prezerwatywa]]
+[[pt:Preservativo]]
+[[ru:Презерватив]]
+[[sv:Kondom]]
