--- a/Kasai_ya_Límbe.mw
+++ b/Kasai_ya_Límbe.mw
@@ -1,3 +1,7 @@
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[en:Kasai-Occidental]]
+[[fr:Kasaï-Occidental]]
+[[sv:Kasai-Occidental]]
