--- a/Bandundu.mw
+++ b/Bandundu.mw
@@ -3,3 +3,9 @@
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[en:Bandundu Province]]
+[[fr:Bandundu (province)]]
+[[he:באנדונדו]]
+[[nl:Bandundu (provincie)]]
+[[sv:Bandundu]]
