--- a/Maniema.mw
+++ b/Maniema.mw
@@ -1,5 +1,9 @@
-
 {{BiteniKongoKinshasa}}
 
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+
+[[en:Maniema]]
+[[fr:Maniema]]
+[[sv:Maniema]]
