--- a/Kivu_ya_Nole.mw
+++ b/Kivu_ya_Nole.mw
@@ -1,5 +1,8 @@
-
 {{BiteniKongoKinshasa}}
 
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[en:Nord-Kivu]]
+[[fr:Nord-Kivu]]
+[[sv:Kivu-Nord]]
