--- a/Etúká_ya_Monyɛlɛ.mw
+++ b/Etúká_ya_Monyɛlɛ.mw
@@ -1,3 +1,7 @@
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[en:Orientale, Congo]]
+[[fr:Orientale]]
+[[sv:Orientale]]
