--- a/Kivu_ya_Sidi.mw
+++ b/Kivu_ya_Sidi.mw
@@ -1,3 +1,7 @@
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[en:Sud-Kivu]]
+[[fr:Sud-Kivu]]
+[[sv:Kivu-Sud]]
