--- a/Kasai_ya_Límbe.mw
+++ b/Kasai_ya_Límbe.mw
@@ -1,3 +1,7 @@
+[[image:DCongoWestKasai.png|right|]]
+
+'''Kasai-Occidental''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]].
+
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
