--- a/Maniema.mw
+++ b/Maniema.mw
@@ -1,3 +1,9 @@
+[[image:DCongoManiema.png|right|]]
+
+'''Maniema''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]].
+
+
+
 {{BiteniKongoKinshasa}}
 
 [[Category:Kɔ́ngɔ-Kinshasa]]
