--- a/Bandundu.mw
+++ b/Bandundu.mw
@@ -1,6 +1,6 @@
 <div style="float:right">[[image:DCongoBandundu.png]]</div>
 
-'''Bandunu''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]].
+'''Bandundu''' ezali [[etuka]] ya ekolo [[Kɔ́ngɔ-Kinshasa]].
 
 
 {{BiteniKongoKinshasa}}
