--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -23,4 +23,11 @@ Comment améliorer un article sur une langue?
 ----
 [[Category:Lokótá]]
 [[Category:bandambo ya Nkota ya Nijer-Kongo]]
+
 {{InterWiki|left|code=kg}}
+
+[[ast:llingua congo]]
+[[en:Kongo language]]
+[[ja:コンゴ王国]]
+[[pl:Język kongo]]
+[[fr:kikongo]]
