--- a/Maluku_(Kinsásá).mw
+++ b/Maluku_(Kinsásá).mw
@@ -1,5 +1,19 @@
 {{ndambo}}
-[[Image:Maluku.jpg|thumb|left|250px|Baleinière sur le Congo au niveau de Maluku]]
+{{Commune RDC 2005|
+nom=Commune de Maluku|
+ville=[[Kinshasa]]|
+bourgmestre=M. [[Lovodi Kale]]|
+lg=[[Lingala]]|
+supkm2=7948,8|
+pop= 65.000|
+annéepop= [[1995]]|
+densité= 8|
+ProvII=[[Kinshasa|Kinshasa]]|
+ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
+}}
+[[Image:Maluku.jpg|thumb|right|250px|Baleinière sur le Congo au niveau de Maluku]]
+
+
 '''Maluku''' ezali na mosika komini ya monene koleka, okati engumba [[Kinshasa]]. Ekoki solo 79% ya etando wa engumba ena. Ekutani o eteni Nor-Este ya engumba-etuka, na ebimeli ya likolo ya [[Pool Malebo]] (eyebanaki kala o nkombo ''Stanley Pool''). Le lieu est connu pour avoir hébergé une importante usine sidérurgique de 1974 à 1976 (traitement à froid) et 1980 (traitement à chaud). 
 
 ==Tala mpe==
@@ -14,3 +28,4 @@
 [[Category:Ba komini ya Kinshasa]]
 
 [[fr:Maluku (Congo)]]
+{{CommunesKinshasa}}
