--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -1,4 +1,16 @@
-{{Commune RDC 2005}}
+{{Commune RDC 2005|
+nom=Commune La Gombe|
+ville=[[Kinshasa]]|
+bourgmestre=Mme [[Justine Kitubu Kamanda]]|
+lg=[[Lingala]]|
+supkm2=? |
+pop= ? |
+annéepop= [[1995]]|
+densité= ?|
+ProvII=[[Kinshasa|Kinshasa]]|
+ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
+}}
+
 [[image:Kinshasa gombe 2001.jpg|thumb|La Gombe]]
 
 '''La Gombe''' tǒ mpé '''Gombe''' ezalí [[komini]] na Nor ya Engumba-Etuka [[Kinshasa]]. Esúkí na ebale [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]] na Nor, mpé na [[boulevale ya 30 juin]] na Sudi.
