--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -1,3 +1,16 @@
+{{Commune RDC 2005|
+nom=Commune de Maluku|
+ville=[[Kinshasa]]|
+bourgmestre=Mme [[Marie-Antoinette Makayabu]]|
+lg=[[Lingala]]|
+supkm2=6,28|
+pop= 134.774|
+annéepop= [[2001]]|
+densité= 15.277|
+ProvII=[[Kinshasa|Kinshasa]]|
+ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
+}}
+
 '''Bandalungwa''', (« ''Bandal'' ») ezalí komini na kátikáti ya [[Kinshasa]].
 
 ==Tála mpé==
