*Empty MediaWiki Message*

--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -1,3 +1,16 @@
+{{Commune RDC 2005|
+nom=Commune de Maluku|
+ville=[[Kinshasa]]|
+bourgmestre=M. Mwanandeke|
+lg=[[Lingála]]|
+supkm2=?|
+pop= ?|
+annéepop= [[?]]|
+densité= ?|
+ProvII=[[Kinshasa|Kinshasa]]|
+ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
+}}
+
 '''Ngaliema''' est une commune de l'ouest de la ville de [[Kinshasa]] en [[République démocratique du Congo]]. La commune s'étire de [[Kintambo]] vers le sud en montant le [[mont Ngaliema]], tout au long de la [[route de Matadi]]. Elle accueille les quartiers suivants :
 
 * Binza Ozone;
