*Empty MediaWiki Message*

--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -1,5 +1,5 @@
 {{Commune RDC 2005|
-nom=Commune de Maluku|
+nom=Commune de Ngaliema|
 ville=[[Kinshasa]]|
 bourgmestre=M. Mwanandeke|
 lg=[[Lingála]]|
