--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -1,5 +1,5 @@
 {{Commune RDC 2005|
-nom=Commune de Maluku|
+nom=Commune de Bandalungwa|
 ville=[[Kinshasa]]|
 bourgmestre=Mme [[Marie-Antoinette Makayabu]]|
 lg=[[Lingala]]|
