--- a/Namibia.mw
+++ b/Namibia.mw
@@ -31,3 +31,10 @@ cctld		= [[.na]] |
 calling_code	= 264|
 footnotes 	= |
 }}
+
+
+
+
+{{Bisé ya Afrika}}
+[[Category:Afrika]]
+[[Category:Bisé ya Afrika]]
