*Empty MediaWiki Message*

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -7,7 +7,7 @@ image_map 		= LocationNamibia.png |
 national_motto 		= Unity, Liberty, Justice<br>(Lingála: bɔ́kɔ́, bonsɔ́mi, jistisi)|
 national_anthem 	= [[Namibia, Land of the Brave]] |
 official_languages 	= [[Lingɛlɛsi]]|
-Nkótá nationales      = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
+Nkótá nasyonale         = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
 capital 		= [[Windhoek]] (lialémani: Windhuk) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
 largest_city 		= [[Windhoek]] (lialémani: Windhuk) |
 government_type 	= [[Republiki]] |
