--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -192,7 +192,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 ''Ekakoli ya molayi : [[Politiki bya Kongo Kinshasa]]''
 
 '''Mama-mobéko''' :
-* {{fr}} [[wikisource:Constitution de la République démocratique du Congo|Mama-mobéko]]
+* {{fr}} [[wikisource:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
 
 '''Bakambi Ekolo''' :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
