--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -191,7 +191,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 == Politiki ==
 ''Ekakoli ya molayi : [[Politiki bya Kongo Kinshasa]]''
 
-'''Mama-mobéko''' :
+'''Mobéko Likonzi''' :
 * {{fr}} [[wikisource:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
 
 '''Bakambi Ekolo''' :
