--- a/Islamu.mw
+++ b/Islamu.mw
@@ -1,5 +1,5 @@
 {{IslamS}}
-'''Islamu''' (na [[liarabi]] balobi ''Islam'' - لإسلام), to mpe '''[[Kimosulmani]]''', ezali moko okati ya barelijion misatu ya [[balandi nzambe moko]]. Lokola okati ya barelijion basusu babale - [[Boklisto]] na [[Boyuda]], [[mosulmani|bamosulmani]] (to mpe balandi Islamu) ba sambelaka nzambe oyo bato-mayele babengi '''nzambe ya Abalamu''' (''Ibrahim'' na kiarabi).
+'''Islamu''' (na [[liarabi]] balobi ''Islam'' - لإسلام), to mpe '''[[Kimosulmani]]''', ezali moko okati ya barelijion misatu ya [[balandi nzambe moko]]. Lokola okati ya barelijion basusu babale - [[Boklísto]] na [[Boyúda]], [[mosulmani|bamosulmani]] (to mpe balandi Islamu) ba sambelaka nzambe oyo bato-mayele babengi '''nzambe ya Abalamu''' (''Ibrahim'' na kiarabi).
 
 [[en:Islam]][[pt:Islam]][[fr:Islam]][[sw:Uislamu]][[ar:Islam]][[es:Islam]]
 
