*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,4 +1,37 @@
-{{infobox_country}}
+common_name         = Switzerland |
+native_name         = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft|
+image_flag         = Switzerland flag large.png |
+image_coat         = Switzerland coat of arms.png |
+image_map         = LocationSwitzerland.png |
+national_motto         = (none)|
+national_anthem     = [[Swiss Psalm]] |
+official_languages     = [[German language|German]], [[French language|French]], [[Italian language|Italian]], [[Romansh language|Romansh]]|
+capital         = [[Bern]] (federal capital) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
+largest_city         = [[Zurich]] |
+government_type     = [[Federal republic]] |
+leader_titles         = [[Swiss Federal Council|Federal Council]]|
+leader_names         = <!-- ordered by seniority -->[[Moritz Leuenberger]] <small>([[President of the Confederation (Switzerland)|Vice Pres. 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
+area             = 41,285|area_rank=132nd|area_magnitude=1 E10|percent_water=4.2|
+population_estimate     = 7,399,100|population_estimate_year=2003|population_estimate_rank=92nd |
+population_density     = 181|population_density_rank=44th |
+population_census     = 7,288,010|population_census_year=2000|
+GDP_PPP         = $233 billion|GDP_PPP_year=2003|GDP_PPP_rank=35th|
+GDP_nominal        = $309 billion|GDP_nominal_year=2003|GDP_nominal_rank=17th|
+GDP_PPP_per_capita     = $30,186|GDP_PPP_per_capita_rank=8th|
+GDP_nominal_per_capita     = $42,138|GDP_nominal_per_capita_rank=3rd|
+HDI_year=2004|
+HDI=0.947|
+HDI_rank=7th|
+HDI_category=<font color="#009900">high</font>|
+sovereignty_type     =[[Independence]] |
+established_events     =- Declared<br> - Recognised<br>Federal state |
+established_dates     =[[Federal Charter of 1291|Federal Charter]]<br> [[August 1]], [[1291]]<br> [[October 24]], [[1648]]<br>[[1848]]|
+currency     = [[Swiss franc]]|currency_code=CHF|
+time_zone     = [[Central European Time|CET]] |utc_offset=+1 |
+time_zone_DST    = [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
+cctld        = [[.ch]] |calling_code    = 41|
+footnotes     = |
+}}
 == Historia ==
 ''Ekakoli ya molayi: [[Historia ya Swisi]]''
 
