--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,3 +1,4 @@
+{{infobox_country
 common_name         = Switzerland |
 native_name         = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft|
 image_flag         = Switzerland flag large.png |
