*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -24,10 +24,10 @@ HDI_year=2004|
 HDI=0.947|
 HDI_rank=7th|
 HDI_category=<font color="#009900">high</font>|
-sovereignty_type     =[[Independence]] |
-established_events     =- Declared<br> - Recognised<br>Federal state |
+sovereignty_type     =[[Lipandá]] |
+established_events     =- Balobaki<br> - Endimamaki<br>Ekolo Fedelali |
 established_dates     =[[Federal Charter of 1291|Federal Charter]]<br> [[August 1]], [[1291]]<br> [[October 24]], [[1648]]<br>[[1848]]|
-currency     = [[Swiss franc]]|currency_code=CHF|
+currency     = [[Franc Swisi]]|currency_code=CHF|
 time_zone     = [[Central European Time|CET]] |utc_offset=+1 |
 time_zone_DST    = [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
 cctld        = [[.ch]] |calling_code    = 41|
