*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,6 +1,6 @@
 {{infobox_country|
-common_name         = Switzerland |
-native_name         = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft|
+common_name         = Swisi |
+native_name         = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft<br>Switzerland|
 image_flag         = Switzerland flag large.png |
 image_coat         = Switzerland coat of arms.png |
 image_map         = LocationSwitzerland.png |
