/* Bakanton (Provinsi Fedelali) */

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -47,8 +47,8 @@ footnotes     = |
 == Politiki ==
 ''Ekakoli ya molayi: [[Politiki ya Swisi]]''
 
-== Ba Kanton (Provinsi Fedelali) ==
-''Ekakoli ya molayi: [[Ba Kanton ya Swisi]]''
+== Bakanton (Provinsi Fedelali) ==
+''Ekakoli ya molayi: [[Bakanton ya Swisi]]''
 
 == Jyografi ==
 '''Ekakoli ya molayi: [[Jyografi ya Swisi]]'''
