--- a/Moto.mw
+++ b/Moto.mw
@@ -1,7 +1,7 @@
 {{ndámbo}}
 '''Moto''': [[mobáli]] na [[mwásí]].
 
-[[Image:Human.png|framed|right|''[[mobáli]] na [[mwásí]]'']]
+[[Image:Human.png|thumb|right|150px|''[[mobáli]] na [[mwásí]]'']]
 
 [[en:Human]]
 [[ar:&#1575;&#1606;&#1587;&#1575;&#1606;]]
