--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,12 +1,12 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''[[Ekólo Nsɔ́mí Kɔ́ngɔ]]<br>(Kɔ́ngɔ-Kinshasa)<br/>République Democratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''</font>
+|+ <font size="+1">'''Republiki ya Kɔ́ngɔ Demokratiki<br/>(Kɔ́ngɔ-Kinshasa)<br/>République Democratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''</font>
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
 |-----
 | align="center" width="285px" | [[Image:Flag of Congo Kinshasa.svg|140px]][[Image:ArmsDRCbig.gif|140px]]|
 |-----
-| align="center" width="280px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
+| align="center" width="280px" | ([[Bɛndɛ́lɛ ya Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
 |}
 |-----
 | align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasi - Jistisi - Bosangani''</font>
