--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -1,3 +1,5 @@
+{{lingála tɛ́}}
+
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300"
 ! colspan="2" bgcolor="orange" style="font-size:120%"|Ciluba
 |-
