*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -10,7 +10,7 @@ image_coat = UK_Royal_Coat_of_Arms.png |
 image_map = LocationUnitedKingdom.png |
 mokáno = [[Dieu et mon droit]] (Royal motto)<br>([[Lifalansé]]: Nzámbe ndé likoki na ngáí)''<sup>2</sup></small> |
 loyémbo = [[God Save the Queen]]<sup>3</sup> |
-nkótá_ya_lɛ́ta = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛsa]] ''[[de facto]]'' <sup>4</sup> |
+nkótá_ya_lɛ́ta = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛ́sa]] ''[[de facto]]'' <sup>4</sup> |
 engúmba_mokonzi = [[Londoni]] |
 latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
 engúmba_monɛ́nɛ = [[Londoni]] |
