--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -2,7 +2,7 @@
 nom=Commune La Gombe|
 ville=[[Kinshasa]]|
 bourgmestre=Mme [[Justine Kitubu Kamanda]]|
-lg=[[Lingala]]|
+lg=[[Lingála]]|
 supkm2=? |
 pop= ? |
 annéepop= [[1995]]|
