--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -2,7 +2,7 @@
 nom=Commune de Bandalungwa|
 ville=[[Kinshasa]]|
 bourgmestre=Mme [[Marie-Antoinette Makayabu]]|
-lg=[[Lingala]]|
+lg=[[Lingála]]|
 supkm2=6,28|
 pop= 134.774|
 annéepop= [[2001]]|
