--- a/Mbuma.mw
+++ b/Mbuma.mw
@@ -10,4 +10,4 @@ La liste des fruits n'est que temporairement ici. Elle sera éffacé d'ici peu. 
 
 
 == L ==
-[[likemba]] [[lingolo]]
+[[likemba]] [[língoló]]
