--- a/Liboke_ya_Congo.mw
+++ b/Liboke_ya_Congo.mw
@@ -1,3 +1,4 @@
+{{lingála tɛ́}}
 '''A traduire      to translate'''
 
 '''Liboke ya Congo''' is a [[Red Hat 9]] based operating system in lingála, installed using "Slinky" from The RULE-Project, and therefore running on even outdated [[esálela|PC]]s with todays speed and the most up to date applications like Abiword 2, OpenOffice 1.1, the latest Acrobat Reader or Webbrowsers like Opera 7.5 and Firefox.
