--- a/Etángela.mw
+++ b/Etángela.mw
@@ -1,6 +1,6 @@
 [[Image:CD-ROM drive.jpg|thumb|*]]
 [[Image:Diskettenlaufwerk.jpg|thumb|*]]
-
+{{ndámbo}}
 
 [[category:esálela]]
 [[fr:Mémoire informatique]]
