--- a/Matádi.mw
+++ b/Matádi.mw
@@ -1,3 +1,5 @@
+{{lingála tɛ́}} 
+
 [[Image:Matadi3.jpg|thumb|right|250px|Les banlieues de Matadi sur le versan sud des gorges du Congo]]
 '''Matadi''' est un port de la [[République Démocratique du Congo]] et la capitale de la province du [[Bas-Congo]]. La ville abrite quelques 235.400 habitants (2004). Matadi est située sur la rive gauche du fleuve [[Congo (fleuve)|Congo]], environ à mi-chemin entre l'[[Océan Atlantique]] et la capitale [[Kinshasa]].
 
