*Empty MediaWiki Message*

--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -13,7 +13,7 @@ ProvII=[[Kinshasa|Kinshasa]]|
 ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 }}
 
-'''Ngaliema''' ezalí komini na ouest na kátikáti ya [[Kinshasa]] ya [[République démocratique du Congo]]. La commune s'étire de [[Kintambo]] vers le sud en montant le [[mont Ngaliema]], tout au long de la [[route de Matadi]]. Elle accueille les quartiers suivants :
+'''Ngaliema''' ezalí komini na ouest na kátikáti ya [[Kinshasa]] ya [[Repubiliki ya Kɔ́ngɔ Demokratiki]]. La commune s'étire de [[Kintambo]] vers le sud en montant le [[mont Ngaliema]], tout au long de la [[route de Matadi]]. Elle accueille les quartiers suivants :
 
 * Binza Ozone;
 * Binza Météo;
