--- a/Kɔ́ngɔ_belji.mw
+++ b/Kɔ́ngɔ_belji.mw
@@ -1,1 +1,2 @@
-[[Image:Mapcongo1914.jpg|thumb|Kongo belji ya 1914]]
+[[Image:Mapcongo1914.jpg|thumb|Kongo belji (1914)]]
+[[Image:Mapcongo1914-2.jpg|thumb|Kongo belji (1914)]]
