/* Mambi ma bobongoli mobeko likonzi */ Nkásá o libanda Wikipedia

--- a/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
+++ b/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
@@ -51,3 +51,7 @@ Mpo ya kobatela bonsomi bwa Ekolo Nsomi ya Kongo, Mobeko Likonzi moye moponi bit
 
 ==Mambi ma bobongoli mobeko likonzi==
 Mpo ya kobatela mambi ma boyangeli ekolo mauti na bato, maye matiami na Mobeko Likonzi moye, zambi ya mikakatano mia bomoi bwa politiki mpe mia mbongwana ndenge na ndenge, mabongisi matali lolenge ya boyangeli ekolo mauti na bato, ya mobeko mwa boponi bwa bato banso, ya bingumba binso bimonana na Mbula Matari, ya motuya mpe eleko ya boumeli na mosala mwa Mokonzi wa Ekolo, ya bonsomi bwa bokonzi bwa kosambisa mpe kokata makambo, ya boyike bwa mangomba ma politiki mpe ma sendika, makoki ata moke te kobongwama.
+
+==Nkásá o libanda Wikipedia==
+* http://www.cei-rdc.org/offres/constitution_ling.pdf Mwango mwa [[Mobeko Likonzi]] mwa [[Repubiliki_ya_Kɔ́ngɔ_Demokratiki|Ekolo Nsomi ya Kongo]]
+* http://www.cei-rdc.org/offres/ Constitution lingála mpe Loi référendaire lingála
