interwiki fr mpe en

--- a/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
+++ b/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
@@ -1,3 +1,5 @@
+[[Image:ArmsDRCbig.gif|right|150px|Democratic republic of the Congo: Coat of Arms]]
+
 '''Mobeko Likonzi mwa sika (2005)''' ya [[Kɔ́ngɔ-Kinshasa|Republiki ya Kɔ́ngɔ Demokratiki]] moye mondimami, motali makambo manene maye: 
 
 ==Mabi matali ekolo mpe bokonzi==
@@ -55,3 +57,6 @@ Mpo ya kobatela mambi ma boyangeli ekolo mauti na bato, maye matiami na Mobeko L
 ==Nkásá o libanda Wikipedia==
 * http://www.cei-rdc.org/offres/constitution_ling.pdf Mwango mwa [[Mobeko Likonzi]] mwa [[Repubiliki_ya_Kɔ́ngɔ_Demokratiki|Ekolo Nsomi ya Kongo]]
 * http://www.cei-rdc.org/offres/ Constitution lingála mpe Loi référendaire lingála
+
+[[fr:Constitution_de_la_République_démocratique_du_Congo]]
+[[en:Constitution of the Democratic Republic of the Congo]]
