--- a/Lisapo_lya_Kongó-Kinsásá.mw
+++ b/Lisapo_lya_Kongó-Kinsásá.mw
@@ -1,1 +1,2 @@
-#REDIRECT [[Politiki bya Kɔ́ngɔ-Kinshasa]]
+[[Image:Mapcongo1914.jpg|thumb|Kongo belji (1914)]]
+[[Image:Mapcongo1914-2.jpg|thumb|Kongo belji (1914)]]
