--- a/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
+++ b/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
@@ -60,3 +60,7 @@ Mpo ya kobatela mambi ma boyangeli ekolo mauti na bato, maye matiami na Mobeko L
 
 [[fr:Constitution_de_la_République_démocratique_du_Congo]]
 [[en:Constitution of the Democratic Republic of the Congo]]
+
+[[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
+[[Category:Kongo Kinshasa|Kɔ́ngɔ-Kinshasa]]
+[[Category:Politiki bya Kɔ́ngɔ-Kinshasa]]
