*Empty MediaWiki Message*

--- a/Politíki_ya_Kongó-Kinsásá.mw
+++ b/Politíki_ya_Kongó-Kinsásá.mw
@@ -5,5 +5,5 @@ Banda tozwaki lipanda na mwa 30 sanza ya motoba mobu [[1960]], Ekolo nsomi ya Ko
 [[en:Politics_of_the_Democratic_Republic_of_the_Congo]]
 
 [[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
-[[Category:Kongo Kinshasa|Kɔ́ngɔ-Kinshasa]]
+[[Category:Kɔ́ngɔ-Kinshasa|Politiki bya Kongo-Kinshasa]]
 [[Category:Politiki bya Kɔ́ngɔ-Kinshasa]]
