--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -14,7 +14,7 @@ Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eye
 |-
 | colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo]] </center>
 |-
-| [[Joseph Kasavubu]] || [[1 juillet|premier juillet]] [[1960]] || [[24 novembre]] [[1965]] ||  || renversé militairement par Mobutu
+| [[Joseph Kasa-Vubu]] || [[1 juillet|premier juillet]] [[1960]] || [[24 novembre]] [[1965]] ||  || renversé militairement par Mobutu
 |-
 | [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] ||  [[25 novembre]] [[1965]] || [[1 juillet|premier juillet]] [[1966]] ||  ||
 |-
