--- a/Patrice_Lumumba.mw
+++ b/Patrice_Lumumba.mw
@@ -3,7 +3,8 @@
 '''Patrice Émery Lumumba''', Moyángeli mwa yambo ya Bulamatari o Kɔ́ngɔ-Kinshasa, abótámí o mobú 1925 mpé akúfí o Katanga o mobú 1961.
 
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
-[[Image:Patrice lumumba.jpg|thumb|Patrice E. Lumumba]]
+[[Image:Lumumba.jpg|thumb|Patrice E. Lumumba]]
+[[Image:Patrice_Lumumba_PM_(2).jpg|thumb|Patrice E. Lumumba]]
 
 [[bg:Патрис Лумумба]]
 [[de:Patrice E. Lumumba]]
