--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -1,6 +1,6 @@
 {{ndambo}}
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
-[[Image:Joseph kasa-vubu.jpg|thumb|Joseph Kasa-Vubu]]
+[[Image:Pres. Joseph Kasa vubu.jpg|thumb|Joseph Kasa-Vubu]]
 
 Mokambi Ekolo 01 07 1960 - 24 11 1965
 (Mokambi Bulamatari na yě azalákí [[Patrice Lumumba]])
