*Empty MediaWiki Message*

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -2,7 +2,7 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Image:Pres. Joseph Kasa vubu.jpg|thumb|Joseph Kasa-Vubu]]
 
-Mokambi Ekolo 01 07 1960 - 24 11 1965
+'''Joseph Kasa-Vubu''', Mokambi Ekolo [[1 yuli]] [[1960]] - [[24 novembere]] [[1965]]
 (Mokambi Bulamatari na yě azalákí [[Patrice Lumumba]])
 
 * voir aussi [[Kongo Demokratiki (Tata-mokonzi)]]
