--- a/Ekopekisa_(Ndenge).mw
+++ b/Ekopekisa_(Ndenge).mw
@@ -1,9 +1,10 @@
-[[image:preservatif-emploi.jpg|70px|left|thumb|Ekopikesa]]
+{{ndambo}}
+[[image:CondomUse.jpg|thumb|150px|left|Ekopikesa]]
 [[category:boyebi mosala ya mónganga]]
 [[category:sida]]
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''[[ekopekisa]]''' ngenge ya [[sida]]. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
-{{ndambo}}
+
 
 Ndenge ya kolata mpe kosalela
 
@@ -17,5 +18,4 @@ Ndenge ya kolata mpe kosalela
 
 * Sima ya bolongoli ekanga, bwaka yango na ekolo  ya bosoto.
 
- Esengami kotiya ekanga na bisika bya mwa mpio mpe ya koyoma,
- esika mwinda to moyi makasi mozangi, pamba te ekobeba.
+Esengami kotiya ekanga na bisika bya mwa mpio mpe ya koyoma, esika mwinda to moyi makasi mozangi, pamba te ekobeba.
