--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -142,7 +142,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 [[Image:DCongoNumbered.png|thumb|300px|right]]
 ''Ekakoli ya molayi : [[Bituka bya Kɔ́ngɔ-Kinshasa]]''
 
-Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Etuka|Bituka]] (''Provinces'' na [[lifalansé]]). Bituka ya Kɔ́ngɔ-Kinshasa bazali:
+Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Etuka|Bituka]] (''Provinces'' na [[lifalansé]]). [[Kinshasa]] ezali mboka mokonzi ya ekolo mpe efandeli ya bituluku bia ekolo. Ezali na makoki ma engumba. Bituka ya Kɔ́ngɔ-Kinshasa bazali:
 
 # [[Bandundu]]
 # [[Bas-Congo]]
