*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -45,7 +45,7 @@
 |-----
 | align="center" colspan="2" | [[Image:DRK.png]]
 |}
-
+'''Republiki ya Kɔ́ngɔ Demokratiki''' ezwami na ndelo ya ye ya mwa [[30 yuni]] [[1960]], ekolo ya makoki, lipanda, bonsomi, ekangani mpe ekabwani te, ya bato, ya bokonzi bouti na bato mpe eponi eyamba yoko te.
 
 == Lokótá ==
 
@@ -142,7 +142,7 @@ Actuellement l'armée française maintient la présence de militaires français 
 [[Image:DCongoNumbered.png|thumb|300px|right]]
 ''Ekakoli ya molayi : [[Bituka bya Kɔ́ngɔ-Kinshasa]]''
 
-Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Etuka|Bituka]] (''Provinces'' na [[lifalansé]]). [[Kinshasa]] ezali mboka mokonzi ya ekolo mpe efandeli ya bituluku bia ekolo. Ezali na makoki ma engumba. Bituka ya Kɔ́ngɔ-Kinshasa bazali:
+Biteni mikonzi bya Kɔ́ngɔ-Kinshasa mibengami [[Etuka|Bituka]] (''Provinces'' na [[lifalansé]]). [[Kinshasa]] ezali mboka mokonzi ya ekolo mpe efandeli ya bituluku bia ekolo. Ezali na makoki ma engumba. Bingumba mpe bituka biyangelami, bizwi makoki ma koyangela yango moko na mobeko mpe bikambemi na bato baye bazwami na bituka bike bia mboka. Bituka biina bia bonsomi bizali mboka mondele, komine, seketele mpe sefeli. Bituka ya Kɔ́ngɔ-Kinshasa bazali:
 
 # [[Bandundu]]
 # [[Bas-Congo]]
