--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -14,27 +14,27 @@ Makomi oyo elandi elakisi liste ya bakambi-mboka oyo balandanaki o ekolo oyo eye
 |-
 | colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo]] </center>
 |-
-| [[Joseph Kasa-Vubu]] || [[1 yuli]] [[1960]] || [[24 novembere]] [[1965]] ||| [[ABAKO]]  || renversé militairement par Mobutu
+| [[Joseph Kasa-Vubu]] || [[1 yuli]] [[1960]] || [[24 novembere]] [[1965]] ||| [[Association des personnes de Bakongo|ABAKO]]  || renversé militairement par Mobutu
 |-
 | [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] ||  [[25 novembere]] [[1965]] || [[1 yuli]] [[1966]] || Mil ||
 |-
 |colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
 |-
-| [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] || [[1 yuli]] [[1966]] || [[27 oktobele]] [[1971]] || [[MRP]] || 
+| [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] || [[1 yuli]] [[1966]] || [[27 oktobele]] [[1971]] || [[Mouvement Populaire Révolutionnaire|MRP]] || 
 |-
 |colspan="5" bgcolor=#5599cc  | <center> [[Kongo-Kinshasa|Zaïre]] </center>
 |-
-| [[Mobutu Sese Seko]] || [[27 oktobele]] [[1971]] || [[16 mai]] [[1997]] || [[MRP]] || renversé alors qu'il était à l'étranger
+| [[Mobutu Sese Seko]] || [[27 oktobele]] [[1971]] || [[16 mai]] [[1997]] || MRP || renversé alors qu'il était à l'étranger
 |-
 |colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
 |-
-| [[Laurent-Désiré Kabila]] || [[17 mai]] [[1997]] || [[29 mai]] [[1997]] || [[AFDL]] || à titre intérimaire
+| [[Laurent-Désiré Kabila]] || [[17 mai]] [[1997]] || [[29 mai]] [[1997]] || [[Alliance des Forces Démocratiques pour la Libération du Congo (Zaïre)|AFDL]] || à titre intérimaire
 |-
-| [[Laurent-Désiré Kabila]] || [[29 mai]] [[1997]] || [[16 yanuari]] [[2001]] || [[AFDL]] || assassiné
+| [[Laurent-Désiré Kabila]] || [[29 mai]] [[1997]] || [[16 yanuari]] [[2001]] || AFDL || assassiné
 |-
-| [[Joseph Kabila]] || [[17 yanuari]] [[2001]] || [[26 yanuari]] [[2001]] || [[AFDL]] || fils du précédent, président par intérim
+| [[Joseph Kabila]] || [[17 yanuari]] [[2001]] || [[26 yanuari]] [[2001]] || AFDL || fils du précédent, président par intérim
 |-
-| [[Joseph Kabila]] || [[26 yanuari]] [[2001]] || <center>-</center> ||  || encadré par 4 vice-présidents des factions de la [[Seconde Guerre du Kivu]].
+| [[Joseph Kabila]] || [[26 yanuari]] [[2001]] || <center>-</center> || AFDL || encadré par 4 vice-présidents des factions de la [[Seconde Guerre du Kivu]].
 |-
 |}
 
