[[:w:als:Benutzer:Chnodomar|Chnodomar]]  Ajoute: an, bs, en, ht, ka, kw, nap, sq, ur Modifie: tl

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -55,64 +55,73 @@ footnotes     = |
 
 {{Europe}}
 
-[[als:Schweiz]]
 [[af:Switserland]]
+[[als:Schweiz]]
+[[an:Suiza]]
 [[ar:سويسرا]]
 [[ast:Suiza]]
-[[bg:Швейцария]]
 [[be:Швайцарыя]]
+[[bg:Швейцария]]
+[[bs:Švicarska]]
 [[ca:Suïssa]]
 [[cs:Švýcarsko]]
 [[cy:Y Swistir]]
 [[da:Schweiz]]
 [[de:Schweiz]]
-[[et:Šveits]]
 [[el:Ελβετία]]
-[[es:Suiza]]
+[[en:Switzerland]]
 [[eo:Svislando]]
+[[es:Suiza]]
+[[et:Šveits]]
+[[fi:Sveitsi]]
 [[fo:Sveis]]
 [[fr:Suisse]]
 [[fy:Switserlân]]
 [[ga:An Eilvéis]]
 [[gd:An Eilbheis]]
 [[gl:Suíza - Schweiz]]
-[[ko:스위스]]
+[[he:שוויץ]]
 [[hr:Švicarska]]
+[[ht:Swis]]
 [[hu:Svájc]]
 [[ia:Suissa]]
-[[io:Suisia]]
 [[id:Swiss]]
+[[io:Suisia]]
 [[is:Sviss]]
 [[it:Svizzera]]
-[[he:שוויץ]]
+[[ja:スイス]]
+[[ka:შვეიცარია]]
+[[ko:스위스]]
+[[kw:Swistir]]
 [[la:Helvetia]]
 [[lb:Schwäiz]]
-[[lt:Šveicarija]]
 [[li:Zwitserland]]
-[[zh-min-nan:Sūi-se]]
+[[lt:Šveicarija]]
 [[mk:Швајцарија]]
 [[ms:Switzerland]]
-[[nl:Zwitserland]]
+[[nap:Sguizzera]]
 [[nds:Swiez]]
-[[ja:スイス]]
-[[nb:Sveits]]
+[[nl:Zwitserland]]
 [[nn:Sveits]]
+[[no:Sveits]]
 [[pl:Szwajcaria]]
 [[pt:Suíça]]
-[[ro:Elveţia]]
 [[rm:Svizra]]
+[[ro:Elveţia]]
 [[ru:Швейцария]]
 [[scn:Svizzira]]
 [[simple:Switzerland]]
 [[sk:Švajčiarsko]]
 [[sl:Švica]]
+[[sq:Zvicra]]
 [[sr:Швајцарска]]
-[[fi:Sveitsi]]
 [[sv:Schweiz]]
-[[tl:Switzerland]]
 [[th:ประเทศสวิตเซอร์แลนด์]]
-[[vi:Thụy Sĩ]]
+[[tl:Switserland]]
 [[tr:İsviçre]]
 [[uk:Швейцарія]]
+[[ur:سوئٹزرلینڈ]]
+[[vi:Thụy Sĩ]]
 [[yi:שװײץ]]
 [[zh:瑞士]]
+[[zh-min-nan:Sūi-se]]
