--- a/Swisi.mw
+++ b/Swisi.mw
@@ -6,7 +6,7 @@ image_coat           = Switzerland coat of arms.png |
 image_map            = LocationSwitzerland.png |
 mokáno               = (none)|
 loyémbo              = [[Swiss Psalm]] |
-nkótá_ya_lɛ́ta       = [[German language|German]], [[French language|French]], [[Italian language|Italian]], [[Romansh language|Romansh]]|
+nkótá_ya_lɛ́ta       = [[Lialemani]], [[Lifalansé]], [[Litaliano]], Rumanch Grischun (fr: Romanche)|
 nkótá_ya_ekólo =|
 engúmba_mokonzi      = [[Bern]] (engúmba mokonzi fedelali) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
 engúmba_monɛ́nɛ      = [[Zurich]] |
