Monkandá ya mibéko

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -32,7 +32,7 @@ HDI_rank=7th|
 HDI_category=<font color="#009900">high</font>|
 sovereignty_type     = [[Lipandá]] |
 established_events     =- Balobaki<br> - Endimamaki<br>Ekólo Fedelali |
-established_dates     =[[Federal Charter of 1291|Federal Charter]]<br> [[August 1]], [[1291]]<br> [[October 24]], [[1648]]<br>[[1848]]|
+established_dates     =[[Monkandá ya mibéko Fedelali ya 1291]]<br> [[1 ogusti]], [[1291]]<br> [[24 oktobele]], [[1648]]<br>[[1848]]|
 mosɔlɔ     = [[Franc Swisi]]|currency_code=CHF|
 ngonga     = [[Central European Time|CET]] |utc_offset=+1 |
 ngonga_DST    = [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
