*Empty MediaWiki Message*

--- a/Politíki_ya_Kongó-Kinsásá.mw
+++ b/Politíki_ya_Kongó-Kinsásá.mw
@@ -1,4 +1,4 @@
-Banda tozwaki lipanda na mwa 30 sanza ya motoba mobu [[1960]], Ekolo nsomi ya Kongo ekutani na mikakatano ndenge na ndenge mya politiki mpe myoko mya ntina ya mikakatano mina ezali koboya kondima bokonzi bopesami na mangomba ma boyangeli ekolo mpe bakambi ba bango. Boboyi bwango bobakisami na bitumba ndenge na ndenge biye bibebisi ekolo banda [[1996]] kino [[2003]]. Mpo ya kosukisa seko mikakatano mya mbala na mbala mitali mambi ma bokonzi mpe kopesa na ekolo konzo ya komitonga, bantoma ba politiki mpe baye ba mangomba ma bato, masanga ma bato banso ba ekolo, bakutani na [[Lisolo linene lya bana Kongo]] (DIC) mpe bandimi na boyokani bonene bwa bato banso, botiami maboko na [[Pretoria]], [[Afrika ya Sudi]], mwa 17 sanza ya zomi na mibale [[2002]], mpo ya boluki kotia mabongisi ma sika ma politiki mauti na [[Mobeko Likonzi]] mwa sika mpe ya bonsomi, epai wapi bana ba Ekolo Kongo bakoki kopona na bonsomi bakonzi ba bango, nsima ya maponami ma bosembo ma bato banso, ma polele mpe ma solo. Mpo ya kolakisa politiki ya mpiko eye emonani na bantoma, na Lisolo linene lya bana Congo, Lingomba lya Babongisi mibeko liuti, na Boyokani bonene bwa bato banso, engebene na atikele 104 ya [[Mobeko Likonzi mwa bwakali]], mwango mwa liboso mwa [[Mobeko Likonzi mwa sika]] na Lingomba lya Bantoma ba Ekolo liye Lindimi yango lokola mwango mwa Mobeko Likonzi moye motiami na etuneli ya bato banso.
+Banda tozwaki lipanda na mwa [[30 yuni]] [[1960]], Ekolo nsomi ya Kongo ekutani na mikakatano ndenge na ndenge mya politiki mpe myoko mya ntina ya mikakatano mina ezali koboya kondima bokonzi bopesami na mangomba ma boyangeli ekolo mpe bakambi ba bango. Boboyi bwango bobakisami na bitumba ndenge na ndenge biye bibebisi ekolo banda [[1996]] kino [[2003]]. Mpo ya kosukisa seko mikakatano mya mbala na mbala mitali mambi ma bokonzi mpe kopesa na ekolo konzo ya komitonga, bantoma ba politiki mpe baye ba mangomba ma bato, masanga ma bato banso ba ekolo, bakutani na [[Lisolo linene lya bana Kongo]] (DIC) mpe bandimi na boyokani bonene bwa bato banso, botiami maboko na [[Pretoria]], [[Afrika ya Sudi]], mwa [[17 febuari]] [[2002]], mpo ya boluki kotia mabongisi ma sika ma politiki mauti na [[Mobeko Likonzi]] mwa sika mpe ya bonsomi, epai wapi bana ba Ekolo Kongo bakoki kopona na bonsomi bakonzi ba bango, nsima ya maponami ma bosembo ma bato banso, ma polele mpe ma solo. Mpo ya kolakisa politiki ya mpiko eye emonani na bantoma, na Lisolo linene lya bana Congo, Lingomba lya Babongisi mibeko liuti, na Boyokani bonene bwa bato banso, engebene na atikele 104 ya [[Mobeko Likonzi mwa bwakali]], mwango mwa liboso mwa [[Mobeko Likonzi mwa sika]] na Lingomba lya Bantoma ba Ekolo liye Lindimi yango lokola mwango mwa Mobeko Likonzi moye motiami na etuneli ya bato banso.
 
 
 [[fr:Politique_de_la_République_démocratique_du_Congo]]
