*Empty MediaWiki Message*

--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -1,38 +1,28 @@
 ---- '''Traducteur français - lingala recherché!''' [[user:Bombo|contact]]
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 
-{| cellspacing="6px"
-| width="70%" style="border: 1px solid #6688AA; background-color:#efefef; padding:0.5em;" valign="top"|
 {{Lonkásá ya libosó/Mbɔ́tɛ}}
-
-| rowspan="4" width="30%" style="border: none; background-color:#efefef; padding:0em;" valign="top" |
+{| cellspacing="6px"
+| width="75%" valign="top"|
+{{Encyclopédie}}<br/>
+{{Lonkásá ya libosó/Lokótá}}<br/>
+{{Lonkásá ya libosó/Nkotá ya Wikipedia}}
+| width="30%" style="border: none; background-color:#efefef; padding:0em;" valign="top" |
 {| cellspacing="0px" cellpadding="0"
 | style="border: 1px solid #6688AA; background-color:#efefef; padding:0.5em;" valign="middle"  |
 {{Lonkásá ya libosó/Óyo nini}}
-|}
-
-|---- valign="top"
-| width="70%"  padding:0.5em;" |
-{| border="0" cellspacing="0" cellpadding="0"
 |-
-| width="50%" valign="top" style="background-color:#eeeef3; border: 1px solid #dde4ee;" |
+|
 {{Lonkásá ya libosó/Nsango nini}}
-| width="10" |
-| valign="top" style="background-color:#eeeef3; border: 1px solid #dde4ee;" |
-<!---------- Participer--------->
+|-
+|
 {{Lonkásá ya libosó/Kosálisa}}
 |}
+|}
 
-|---- valign="top"
-| width="100%" style="border: 1px solid #32CD32; background-color:#FFFFFF; padding:0.5em;" |
 <div text-align:center; background-color:#FCFCFC;  padding:0.6ex 2ex;">
 '''«[[Special:Allpages|Allpages]]»''' &nbsp; – &nbsp; [[Special:Categories|ekákoli par catégorie]] &nbsp; – &nbsp; [[Special:Newpages|ekakoli ya sika]] &nbsp; – &nbsp; [[Special:Wantedpages|ekakoli manquants]]  &nbsp; – &nbsp; [[Wikipedia_themes|par thèmes]]</div>
 </div>
-|}
-
-{{Lonkásá ya libosó/Lokótá}}
-<div style="position:relative;visibility:hidden">---Sidenote START---</div>
-{{Lonkásá ya libosó/Nkotá ya Wikipedia}}
 
 
 
