--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -134,27 +134,43 @@ Actuellement l'armée française maintient la présence de militaires français 
 ''Ekakoli ya molayi : [[:fr:Démographie de la République démocratique du Congo]]''
 
 
-[[Image:Congo dem demographie.png|thumb|350px|leftÉvolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
+[[Image:Congo dem demographie.png|thumb|350px|center|Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
 
- 1990   37 405 000   (UNHCR [[Bikólo ya Molɔngɔ]])
- 1991
- 1992
- 1993
- 1994
- -
- 1995   45 453 000   (UNHCR [[Bikólo ya Molɔngɔ]])
- 1996   46 812 000   (UNHCR [[Bikólo ya Molɔngɔ]])
- 1997   48 040 000   (UNHCR [[Bikólo ya Molɔngɔ]])
- 1998
- 1999
- -
- 2000   51 390 000   (globaldefence.net)
- 2001   53 624 718   (yuli; CIA World Factbook)
- 2002   55 225 478   (yuli; CIA World Factbook)
- 2003   56 625 039   (yuli; CIA World Factbook)
- 2004   58 318 000   (CIA World Factbook)
- -
- 2005   60 085 804   (yuli; CIA World Factbook)
+{|{{prettytable}}
+! est. !! bato !! source 
+|-
+| 1990 || 37 405 000 || (UNHCR [[Bikólo ya Molɔngɔ]])
+|-
+| 1991
+|-
+| 1992
+|-
+| 1993
+|-
+| 1994
+|-
+|1995  || 45 453 000  || (UNHCR [[Bikólo ya Molɔngɔ]])
+|-
+|1996  || 46 812 000 ||  (UNHCR [[Bikólo ya Molɔngɔ]])
+|-
+|1997 ||  48 040 000  || (UNHCR [[Bikólo ya Molɔngɔ]])
+|-
+|1998
+|-
+|1999
+|-
+|2000  || 51 390 000  || (globaldefence.net)
+|-
+|2001  || 53 624 718  || (yuli; CIA World Factbook)
+|-
+|2002  || 55 225 478 ||  (yuli; CIA World Factbook)
+|-
+|2003 ||  56 625 039 ||  (yuli; CIA World Factbook)
+|-
+|2004 ||  58 318 000 ||  (CIA World Factbook)
+|-
+|2005 ||  60 085 804 ||  (yuli; CIA World Factbook)
+|}
 
 <br clear=all />
 
