--- a/Islamu.mw
+++ b/Islamu.mw
@@ -4,5 +4,5 @@
 [[en:Islam]][[pt:Islam]][[fr:Islam]][[sw:Uislamu]][[ar:Islam]][[es:Islam]]
 
 
-[[category:relijion]]
+[[category:relijió]]
 [[category:islamu]]
