--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -102,5 +102,5 @@ Maison "ad instar domus" Ba Lazariste ba Liège bavandi esika yoko te, kasi baza
 {| class="WSerieV" id="WSerie_Christianisme" tableborder="1" cellspacing="0" style="padding: 0.3em; float:right; clear: right; margin: 0 0 5px 1em; border:1px solid #669966; border-right-width: 2px; border-bottom-width: 2px; background:#BBCCCC; text-align:center;"
 {{Religions}}
 |}
-[[category:relijion]]
+[[category:relijió]]
 [[category:boklísto]]
