--- a/Vincent_wa_Paul.mw
+++ b/Vincent_wa_Paul.mw
@@ -27,5 +27,5 @@ Apesi babola lokumu (bazali "bankumu mpe bakonzi ba biso"), asikoli bomoi bwa ba
 {| class="WSerieV" id="WSerie_Christianisme" tableborder="1" cellspacing="0" style="padding: 0.3em; float:right; clear: right; margin: 0 0 5px 1em; border:1px solid #669966; border-right-width: 2px; border-bottom-width: 2px; background:#BBCCCC; text-align:center;"
 {{Religions}}
 |}
-[[category:relijion]]
+[[category:relijió]]
 [[category:boklísto]]
