--- a/Bitúká_bya_Kongó-Kinsásá.mw
+++ b/Bitúká_bya_Kongó-Kinsásá.mw
@@ -70,6 +70,6 @@ Okati o búku ya mibeko-mokonzi bya Kɔ́ngɔ-Kinshasa, oyo eponámáki na bakom
 
 {{BiteniKongoKinshasa}}
 
-[[Catégorie:Ba Provinsi bya Repubiliki ya Kongo Democratiki|*]]
+[[Catégorie:Ba Provinsi bya Repubiliki ya Kongo Democratiki|*]] [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
 [[en:Subdivisions of the Democratic Republic of the Congo]] [[fr:Provinces de la République Démocratique du Congo]]
