--- a/Bɛndɛ́lɛ_ya_Swisi.mw
+++ b/Bɛndɛ́lɛ_ya_Swisi.mw
@@ -3,3 +3,8 @@
 Bɛndɛ́lɛ ya Swisi
 
 {{Nationalflags}}
+
+[[Category:Molɔngɔ́ ya babɛndɛ́lɛ ya bisé|*]]
+[[Category:Molɔngɔ́ ya babɛndɛ́lɛ| ]]
+[[Category:Swisi]]
+[[Category:Bisé ya Eropa]]
