--- a/Kɔ́ngɔ_belji.mw
+++ b/Kɔ́ngɔ_belji.mw
@@ -1,2 +1,7 @@
 [[Image:Mapcongo1914.jpg|thumb|Kongo belji (1914)]]
 [[Image:Mapcongo1914-2.jpg|thumb|Kongo belji (1914)]]
+
+
+[[Category:Afrika]]
+[[Category:Historia ya Afrika]]
+[[Category:Kɔ́ngɔ-Kinshasa]]
