--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -50,3 +50,6 @@ Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu 
 [[fr:Congo belge]]
 [[nl:Belgisch Congo]]
 [[sv:Belgiska Kongo]]
+
+[[Category:Kɔ́ngɔ-Kinshasa]]
+[[Category:Historia ya Afrika]]
