--- a/London_Borough_of_Barking_and_Dagenham.mw
+++ b/London_Borough_of_Barking_and_Dagenham.mw
@@ -11,3 +11,6 @@ Ba masanga yasika ewutu ko salama na kati ya oyo ezalaka mpe toza na 3500  a 500
 
 
 {{Londoni}}
+
+[[Category:Bakomini ya Londoni]]
+[[Category:Ingɛlɛ́tɛlɛ]]
