--- a/Ndáko_ya_bokɔnɔ.mw
+++ b/Ndáko_ya_bokɔnɔ.mw
@@ -12,3 +12,6 @@ Soki biloko ya [[doktolo]] ezali kobikisa yo te, to ozali na posa ya biloko elek
 [[id:Rumah sakit]]
 [[he:בית חולים]]
 [[nl:Ziekenhuis]]
+
+[[Category:Móngana]]
+[[Category:Nzoto kolongono]]
