--- a/Misalisi_ya_Mbangu.mw
+++ b/Misalisi_ya_Mbangu.mw
@@ -44,4 +44,5 @@ Tango ambulance ekomi, yango ekomema yo ti na lopital ya misalisi ya mbangu oyo 
 * Bazoki basusu bakosalela bango [[Rayon-X]] te
 * [[Doktolo]] nayo ayebaka na ndenge ekoki kosalisa yo. Kasi baye ya Misalisi ya Mbangu bayebi mingi mpona makambo ya kozoka na makambo ya misalisi ya mbangu
 
-[[]]
+[[Category:Móngana]]
+[[Category:Nzoto kolongono]]
