--- a/Ordonnance.mw
+++ b/Ordonnance.mw
@@ -1,1 +1,4 @@
 Soki ozali na posa ya [[dokotolo]] ye akokomela yo bankisi. Mokanda ya '''ordonnance''' elobaka oyo nkisi dokotolo alingi ozua. Mpona kozua nkisi yango ebongi omema mokanda yango na [[pharmacie]]. Badokotolo basusu bakomelaka mokanda ya nkisi te. Basusu bakoyebisa yo osomba nkisi yo moko na pharmacie.
+
+[[Category:Móngana]]
+[[Category:Nzoto kolongono]]
