--- a/Famasi.mw
+++ b/Famasi.mw
@@ -3,3 +3,6 @@
 Nzela ya kozua pharmacie yango oyo:
 * Tuna na zando to na [[butiki]] epayi wapi pharmacie ezali
 * Kende yo moko epayi ya pharmacie.
+
+[[Category:Móngana]]
+[[Category:Nzoto kolongono]]
